--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
     -->
 
     <link href="https://fonts.googleapis.com/css?family=Righteous|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Nothing+You+Could+Do&display=swap" rel="stylesheet">
+
+
+
     <!-- google FONTS -->
 
 
